--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -8,7 +8,7 @@
         .container {
                 max-width: 800px;
                 margin: 0 auto;
-                color: grey;
+                color: #6b5f5f;
                 font-family: sans-serif;
                 padding: 60px;
                 padding-left: 20px;
