--- a/ui/article-two.html
+++ b/ui/article-two.html
@@ -3,8 +3,21 @@
         <title>
             Article Two | Anurag Kumar
         </title>
+        <meta name="viewport" content="width=device-width,initial-scale=1">
+        <style>
+        .container {
+                max-width: 800px;
+                margin: 0 auto;
+                color: #6b5f5f;
+                font-family: sans-serif;
+                padding: 60px;
+                padding-left: 20px;
+                padding-right: 20px;
+        }
+        </style>
     </head>
     <body>
+        <div class="container">
         <div>
             <a href="/">Home</a>
         </div>
@@ -28,10 +41,7 @@
                 This is the content of my first article.This is the content of my first article.This is the content of my first article.
                 This is the content of my first article.This is the content of my first article.This is the content of my first article.
             </p>
-            <p>
-                This is the content of my first article.This is the content of my first article.This is the content of my first article.
-                This is the content of my first article.This is the content of my first article.This is the content of my first article.
-            </p>
+        </div>
         </div>
     </body>
 </html>
