--- a/ui/index.html
+++ b/ui/index.html
@@ -4,18 +4,25 @@
         <link href="/ui/style.css" rel="stylesheet" />
     </head>
     <body>
-        <div class="center">
-            <img src="/ui/madi.png" id = 'madi' class="img-medium"/>
+        <div class="container">
+            <div class="center">
+                <img src="/ui/fb.jpg" id = 'madi' class="img-medium"/>
+            </div>
+            <hr/>
+            <br>
+            <h3>Personal</h3>
+            <div>
+                Hi,My name is Anurag Kumar Singh!
+            </div>
+            <hr/>
+            <h3>Professional</h3>
+            <div>
+                I work at NIIT UNIVERSITY
+            </div>
+            <hr/>
+            <div class="footer">
+            </div>
         </div>
-        <br>
-        <div id = 'main-text' class="center text-big bold">
-            Hi! I am Anurag and this my web app.
-	    <h4>New Heading</h4>
-	    I've made some local changes
-        </div>
-        <script>
-            alert('Hi,I\'m javascript!');
-        </script>
         <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
