[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -6,7 +6,7 @@
     <body>
         <div class="container">
             <div class="center">
-                <img src="/ui/fb.jpg" id = 'madi' class="img-medium"/>
+                <img src="https://pbs.twimg.com/profile_images/781764860572938240/GJSkKqsk_400x400.jpg" id = 'madi' class="img-medium"/>
             </div>
             <hr/>
             <br>
